# Peter-Shirley-Ray-Tracing-the-next-week

./: README.html  README.md
Peter-Shirley-Project Code/: CMakeLists.txt  aabb.h  aarect.h  box.h  bvh.h  camera.h  constant_medium.h  hitable.h  hitable_list.h  main.cpp  material.h  perlin.h  ray.h  sphere.h  surface_texture.h  texture.h
The-Next-Week/: Chapter01_Motion Blur.cpp  Chapter01_Motion Blur.ppm  Chapter03_Soild Texture.cpp  Chapter04_Perlin noise_noise1.ppm  Chapter04_Perlin noise_noise2 smoth.ppm  Chapter04_Perlin noise_noise3 hermite cubic smoth.ppm  Chapter06_Rectangles and Lights1.ppm  Chapter06_Rectangles and Lights_CornelBox.ppm  Chapter07_Instance.cpp  Chapter07_Instance_add box ratate and translate.ppm  Chapter07_Instance_add box.ppm  Chapter08_Volume.cpp  Chapter08_Volume.ppm  final 100x100 sample 1000.ppm  final 500x500 sample 100.ppm  final add floor 200x200 sample 100.ppm
